Fix font size that was showing up too small on part of the plant preview popup.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1846 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -702,7 +702,7 @@ div.modal-wrap {
     padding: 13px 0 0 20px;
 }
 .modal-wrap .inner p {
-    font-size: 11px;
+    font-size: 12px;
     margin: 0;
     padding: 4px 20px 0;
 }
